2009-08-10  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update copyright notices.
	
	* reheader.pl: Drop support for `sl_begin_header' and
	`sl_end_header'. Simplify.
	
	* Makefile.am: Adapt target `rehead', but avoid changing
	the (imported) source for `dlmalloc'.
	
	* lib/host-host-ptl/include/svp_os.h,
	* lib/host-host-seqc/include/svp_os.h,
	* lib/include/climits.h,
	* lib/include/cmalloc.h,
	* lib/include/cstdbool.h,
	* lib/include/cstddef.h,
	* lib/include/cstdint.h,
	* lib/include/sac_helpers.h,
	* lib/include/svp/argslot.h,
	* lib/include/svp/assert.h,
	* lib/include/svp/div.h,
	* lib/include/svp/io.h,
	* lib/include/svp/iomacros.h,
	* lib/include/svp/minimath.h,
	* lib/include/svp/perf.h,
	* lib/include/svp/roman.h,
	* lib/mtalpha-sim/include/svp_asmdiv.h,
	* lib/mtalpha-sim/include/svp_os.h,
	* lib/src/div.c,
	* lib/src/io.c,
	* lib/src/malloc_intrinsics.c,
	* lib/src/malloc_intrinsics.h,
	* lib/src/roman.c,
	* lib/src/strlib.c,
	* lib/tests/div/div.c,
	* lib/tests/div/div2.c,
	* lib/tests/div/div3.c,
	* lib/tests/malloc/m1.c,
	* lib/tests/malloc/m2.c,
	* lib/tests/sac1.c,
	* programs/benchmarks/blas/blas-test-saxpy.c,
	* programs/benchmarks/blas/blas_complex.h,
	* programs/benchmarks/blas/caxpy.c,
	* programs/benchmarks/blas/cdotc.c,
	* programs/benchmarks/blas/cdotu.c,
	* programs/benchmarks/blas/daxpy.c,
	* programs/benchmarks/blas/ddot.c,
	* programs/benchmarks/blas/saxpy.c,
	* programs/benchmarks/blas/sdot.c,
	* programs/benchmarks/blas/templates/xaxpy.c,
	* programs/benchmarks/blas/templates/xaxpyc.c,
	* programs/benchmarks/blas/templates/xdot.c,
	* programs/benchmarks/blas/templates/xdotc.c,
	* programs/benchmarks/blas/zaxpy.c,
	* programs/benchmarks/blas/zdotc.c,
	* programs/benchmarks/blas/zdotu.c,
	* programs/benchmarks/fft/fft.h,
	* programs/benchmarks/fft/fft_bench.c,
	* programs/benchmarks/fft/fft_bench1.c,
	* programs/benchmarks/fft/fft_bench2.c,
	* programs/benchmarks/fft/fft_extra.c,
	* programs/benchmarks/fft/fft_impl1.c,